--- a/src/assets/css/_mixins.scss
+++ b/src/assets/css/_mixins.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
-@use 'msprite';
+@use 'sprite/mo_icons';
 
 // transform
 @mixin transform($transforms) {
@@ -50,8 +50,15 @@
 
 // mobile 2x design
 @mixin sprite($sprite) {
-	@include msprite.sprite($sprite);
-	background-size: calc(msprite.$spritesheet-width / 2) calc(msprite.$spritesheet-height / 2);
+	@include mo_icons.sprite($sprite);
+	$sprite-offset-x: nth($sprite, 3);
+	$sprite-offset-y: nth($sprite, 4);
+	$sprite-width: nth($sprite, 5);
+	$sprite-height: nth($sprite, 6);
+	width: calc($sprite-width / 2);
+	height: calc($sprite-height / 2);
+	background-position: calc($sprite-offset-x / 2) calc($sprite-offset-y / 2);
+	background-size: calc(mo_icons.$mo-icons-width / 2) calc(mo_icons.$mo-icons-height / 2);
 }
 
 // icons
