--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -72,69 +72,10 @@
 }
 
 
-// .card_board {
-// 	position: relative;
-// 	margin-top:40px;
-// 	margin-left:10px;
-// 	margin-right:-10px;
-// 	li {
-// 		position: absolute;
-// 		padding-bottom:40px;
-// 		opacity: 0;
-// 		overflow:hidden;
-// 		.pic {
-// 			position: relative;
-// 			margin-bottom:24px;
-// 			overflow:hidden;
-// 			clip-path:inset(0);
-// 			// @include transition(.4s, ease);
-// 			&:before {
-// 				content: '';
-// 				display: block;
-// 				position: absolute;
-// 				top:0;
-// 				background:#f2f2f2;
-// 				width:100%;height:100%;
-// 				-webkit-transform: scaleY(1);
-// 				-ms-transform: scaleY(1);
-// 				transform: scaleY(1);
-//     		-webkit-transform-origin: bottom center;
-//     		-ms-transform-origin: bottom center;
-//     		transform-origin: bottom center;
-// 				-webkit-transition: transform 1s;
-// 				-ms-transition: transform 1s;
-// 				transition: transform 1s;
-// 			}
-// 			img {
-// 			}
-// 		}
-
-// 		&.is-active {
-// 			opacity: 1;
-// 			.pic {
-// 				&:before {
-// 					-webkit-transform: scaleY(0);
-// 					-ms-transform: scaleY(0);
-// 					transform: scaleY(0);
-// 				}
-// 			}
-// 		}
-// 		&:hover, &:focus {
-// 			.pic {
-// 				clip-path:inset(24px 24px 24px);
-// 				img {
-// 					// @include scale(1.15);
-// 				}
-// 			}
-// 			.info {
-// 				&:before { width:0; }
-// 				.blet {
-// 					width:40px;
-// 					i{
-// 						width:100%;
-// 					}
-// 				}
-// 			}
-// 		}
-// 	}
-// }
+.card_board {
+	position: relative;
+	li {
+		position: absolute;
+		overflow:hidden;
+	}
+}
